updated jumbotron image

--- a/app/assets/stylesheets/pokemons.scss
+++ b/app/assets/stylesheets/pokemons.scss
@@ -14,7 +14,7 @@ img {
 
 .jumbotron {
     border-radius: 25px;
-    background-image: url(pink_rice.png);
+    background-image: url(sprinkles.png);
 }
 
 body {
